[package]
name = "lava-test-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
log = "0.4"
env_logger = "0.10.0"
bip39 = "2.0.0"
regex = "1.9.5"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
anyhow = "1.0.75"
url = "2.4.1"
futures = "0.3.28"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "sqlite"] }

[features]
default = []
